# vrf-demo-walkthrough

./: .gitignore  Anchor.toml  README.md  package.json
00_walkthrough/: 0_anchor_init.md  1_add_dependencies.md  2_initial_program_scaffolding.md  3_setup_switchboard_environment.md  4_add_init_client_instruction.md  5_add_request_randomness_instruction.md  6_add_consume_randomness_instruction.md  7_anchor_client_gen.md  8_deployment_instructions.md  9_more_info.md  README.md
client/: programId.ts
client/accounts/: VrfClientState.ts  index.ts
client/errors/: custom.ts
client/instructions/: consumeRandomness.ts  index.ts  initClient.ts  requestRandomness.ts
client/types/: ConsumeRandomnessParams.ts  InitClientParams.ts  RequestRandomnessParams.ts  index.ts
programs/vrf-client/: Cargo.toml
programs/vrf-client/src/: lib.rs
programs/vrf-client/src/actions/: consume_randomness.rs  init_client.rs  mod.rs  request_randomness.rs
tests/: vrf-client.ts
