[package]
name = "vrf-client"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vrf_client"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "~0.26.0"
anchor-spl = "~0.26.0"
solana-program = "^1.13.5"
switchboard-v2 = { version = "^0.1.20", features = ["devnet"] }
bytemuck = "1.7.2"